--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ bld/
 [Ll]og/
 
 # .dlls you really shouldn't be uploading to GitHub
-libs/
+libraries/
 
 # Visual Studio 2015 cache/options directory
 .vs/
