--- a/Lightbringer/LightbringerApiPort.csproj
+++ b/Lightbringer/LightbringerApiPort.csproj
@@ -2,49 +2,48 @@
     <PropertyGroup>
         <RootNamespace>Lightbringer</RootNamespace>
         <AssemblyName>Lightbringer</AssemblyName>
-        <TargetFramework>net35</TargetFramework>
-        <AssemblyTitle>Testing</AssemblyTitle>
+        <TargetFramework>net472</TargetFramework>
+        <AssemblyTitle>Lightbringer Mod</AssemblyTitle>
         <Product>Lightbringer</Product>
-        <Copyright>Copyright © 2019</Copyright>
+        <Copyright>2019</Copyright>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <Authors>753</Authors>
         <Company>753.network</Company>
-        <Version>1.2.0</Version>
+        <Version>1.3.0</Version>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Assembly-CSharp">
-          <HintPath>..\Libs\Assembly-CSharp.dll</HintPath>
+            <HintPath>..\Libraries\Assembly-CSharp.dll</HintPath>
         </Reference>
-        <Reference Include="Microsoft.CSharp">
-          <HintPath>..\Libs\Microsoft.CSharp.dll</HintPath>
-        </Reference>
-        <Reference Include="ModCommon">
-          <HintPath>..\Libs\ModCommon.dll</HintPath>
-        </Reference>
+		<Reference Include="MMHOOK_Assembly-CSharp">
+			<HintPath>..\Libraries\MMHOOK_Assembly-CSharp.dll</HintPath>
+		</Reference>
+		<Reference Include="Vasi">
+			<HintPath>..\Libraries\Vasi.dll</HintPath>
+		</Reference>
         <Reference Include="PlayMaker">
-          <HintPath>..\Libs\PlayMaker.dll</HintPath>
+            <HintPath>..\Libraries\PlayMaker.dll</HintPath>
         </Reference>
-        <Reference Include="System.Data.DataSetExtensions" />
         <Reference Include="UnityEngine">
-          <HintPath>..\Libs\UnityEngine.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.AudioModule">
-          <HintPath>..\Libs\UnityEngine.AudioModule.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.AudioModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.CoreModule">
-          <HintPath>..\Libs\UnityEngine.CoreModule.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.ImageConversionModule">
-          <HintPath>..\Libs\UnityEngine.ImageConversionModule.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.ImageConversionModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.TextRenderingModule">
-          <HintPath>..\Libs\UnityEngine.TextRenderingModule.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.TextRenderingModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UI">
-          <HintPath>..\Libs\UnityEngine.UI.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.UI.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UIModule">
-          <HintPath>..\Libs\UnityEngine.UIModule.dll</HintPath>
+            <HintPath>..\Libraries\UnityEngine.UIModule.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
@@ -63,7 +62,6 @@
         <EmbeddedResource Include="Resources\Charms\25.png" />
         <EmbeddedResource Include="Resources\Charms\26.png" />
         <EmbeddedResource Include="Resources\Charms\35.png" />
-        <EmbeddedResource Include="Resources\Charms\brokestr.png" />
         <EmbeddedResource Include="Resources\Charms\ustr.png" />
         <EmbeddedResource Include="Resources\Muzznik.png" />
         <EmbeddedResource Include="Resources\Lances.png" />
@@ -72,9 +70,4 @@
         <EmbeddedResource Include="Resources\Sprint.png" />
         <EmbeddedResource Include="Resources\UI.png" />
     </ItemGroup>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="@echo on" />
-        <Exec Command="echo Copying mod" />
-        <Exec Command="copy &quot;$(TargetPath)&quot; &quot;D:\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\&quot;" />
-    </Target>
 </Project>
