--- a/Lightbringer/LightbringerApiPort.csproj
+++ b/Lightbringer/LightbringerApiPort.csproj
@@ -9,7 +9,7 @@
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <Authors>753</Authors>
         <Company>753.network</Company>
-        <Version>2.1.3</Version>
+        <Version>2.1.4</Version>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Assembly-CSharp">
@@ -69,6 +69,7 @@
         <EmbeddedResource Include="Resources\Charms\25.png" />
         <EmbeddedResource Include="Resources\Charms\26.png" />
         <EmbeddedResource Include="Resources\Charms\35.png" />
+		<EmbeddedResource Include="Resources\Charms\brokestr.png" />
         <EmbeddedResource Include="Resources\Charms\ustr.png" />
         <EmbeddedResource Include="Resources\Muzznik.png" />
         <EmbeddedResource Include="Resources\Lances.png" />
