--- a/Lightbringer/LightbringerApiPort.csproj
+++ b/Lightbringer/LightbringerApiPort.csproj
@@ -36,6 +36,14 @@
             <HintPath>..\Libraries\UnityEngine.CoreModule.dll</HintPath>
 			<Private>False</Private>
         </Reference>
+		<Reference Include="UnityEngine.Physics2DModule">
+			<HintPath>..\Libraries\UnityEngine.Physics2DModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.ParticleSystemModule">
+			<HintPath>..\Libraries\UnityEngine.ParticleSystemModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
         <Reference Include="UnityEngine.ImageConversionModule">
             <HintPath>..\Libraries\UnityEngine.ImageConversionModule.dll</HintPath>
 			<Private>False</Private>
