Implemented Light Blast and Cleaved Spirit

--- a/Lightbringer/LightbringerApiPort.csproj
+++ b/Lightbringer/LightbringerApiPort.csproj
@@ -67,9 +67,11 @@
         <EmbeddedResource Include="Resources\Charms\4.png" />
         <EmbeddedResource Include="Resources\Charms\6.png" />
         <EmbeddedResource Include="Resources\Charms\8.png" />
+		<EmbeddedResource Include="Resources\Charms\11.png" />
         <EmbeddedResource Include="Resources\Charms\13.png" />
         <EmbeddedResource Include="Resources\Charms\14.png" />
         <EmbeddedResource Include="Resources\Charms\15.png" />
+		<EmbeddedResource Include="Resources\Charms\17.png" />
         <EmbeddedResource Include="Resources\Charms\18.png" />
         <EmbeddedResource Include="Resources\Charms\19.png" />
         <EmbeddedResource Include="Resources\Charms\20.png" />
