Reorganizing sprites code

--- a/Lightbringer/LightbringerApiPort.csproj
+++ b/Lightbringer/LightbringerApiPort.csproj
@@ -88,7 +88,7 @@
         <EmbeddedResource Include="Resources\Knight.png" />
         <EmbeddedResource Include="Resources\Sprint.png" />
 		<EmbeddedResource Include="Resources\VoidSpells.png" />
-		<EmbeddedResource Include="Resources\Void.png" />
+		<EmbeddedResource Include="Resources\VoidParticle.png" />
         <EmbeddedResource Include="Resources\UI.png" />
     </ItemGroup>
 </Project>
